@@ -4,7 +4,7 @@
 
   Qore Programming Language
 
-  Copyright (C) 2006 - 2015 Qore Technologies, sro
+  Copyright (C) 2006 - 2016 Qore Technologies, sro
 
   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
@@ -1086,30 +1086,34 @@ void OraBindNode::bindValue(ExceptionSink* xsink, int pos, const AbstractQoreNod
 
       qore_size_t len;
 
-      // convert to the db charset if necessary
-      TempString nstr(bstr->getEncoding() != stmt.getEncoding()
-                      ? bstr->QoreString::convertEncoding(stmt.getEncoding(), xsink)
-                      : new QoreString(*bstr));
+      // convert to target encoding if necessary
+      TempEncodingHelper nstr(bstr, stmt.getEncoding(), xsink);
       if (*xsink)
          return;
+
       if (in_only) {
          len = nstr->size();
          buf.ptr = (void*)nstr->getBuffer();
-         data.save(nstr.release());
+         if (nstr.is_temp())
+            data.save(new QoreString(nstr.giveBuffer(), len, len + 1, bstr->getEncoding()));
       }
       else {
          qore_size_t mx = data.ph_maxsize > 0 ? data.ph_maxsize : 0;
+         nstr.makeTemp();
+
          if (mx <= 0)
             mx = DBI_DEFAULT_STR_LEN;
-         if (mx > nstr->capacity())
-            nstr->allocate(mx);
+         if (mx > nstr->capacity()) {
+            QoreString* tstr = const_cast<QoreString*>(*nstr);
+            tstr->allocate(mx);
+         }
 
          len = nstr->capacity() - 1;
-         buf.ptr = (void*)nstr->giveBuffer();
+         buf.ptr = (void*)nstr.giveBuffer();
       }
 
       // bind it
-      if ((len + 1) > CLOB_THRESHOLD && in_only) {
+      if ((len + 1) > LOB_THRESHOLD && in_only) {
          //printd(5, "binding string %p len: %lld as CLOB\n", buf.ptr, len);
          // bind as a CLOB
          dtype = SQLT_CLOB;
@@ -1123,7 +1127,7 @@ void OraBindNode::bindValue(ExceptionSink* xsink, int pos, const AbstractQoreNod
                              "OraBindNode::bindValue() create temporary CLOB", xsink))
             return;
 
-         clob_allocated = true;
+         lob_allocated = true;
 
          // write the buffer data into the CLOB
          if (conn->writeLob(strlob, buf.ptr, len, true, "OraBindNode::bindValue() write CLOB", xsink))
@@ -1156,19 +1160,51 @@ void OraBindNode::bindValue(ExceptionSink* xsink, int pos, const AbstractQoreNod
    }
 
    if (ntype == NT_BINARY) {
-      dtype = SQLT_BIN;
       const BinaryNode* b = reinterpret_cast<const BinaryNode*>(v);
-      // bind a copy of the value in case of in/out variables
-      SimpleRefHolder<BinaryNode> tb(b->copy());
-      qore_size_t len = tb->size();
 
-      printd(5, "OraBindNode::bindValue() BLOB ptr: %p size: %d\n", tb->getPtr(), tb->size());
+      qore_size_t len = b->size();
 
-      buf.ptr = (void*)(in_only ? tb->getPtr() : tb->giveBuffer());
-      if (in_only)
-         data.save(tb.release());
+      if (len > LOB_THRESHOLD && in_only) {
+         //printd(5, "binding binary %p len: %lld as BLOB\n", buf.ptr, len);
+         // bind as a BLOB
+         dtype = SQLT_BLOB;
 
-      stmt.bindByPos(bndp, pos, buf.ptr, len, SQLT_BIN, xsink, pIndicator);
+         buf.ptr = (void*)b->getPtr();
+
+         // allocate LOB descriptor
+         if (conn->descriptorAlloc((dvoid**)&strlob, OCI_DTYPE_LOB, "OraBindNode::bindValue() alloc LOB descriptor", xsink))
+            return;
+
+         // create temporary BLOB
+         if (conn->checkerr(OCILobCreateTemporary(conn->svchp, conn->errhp, strlob, OCI_DEFAULT, OCI_DEFAULT, OCI_TEMP_BLOB, FALSE, OCI_DURATION_SESSION),
+                             "OraBindNode::bindValue() create temporary BLOB", xsink))
+            return;
+
+         lob_allocated = true;
+
+         // write the buffer data into the CLOB
+         if (conn->writeLob(strlob, buf.ptr, len, true, "OraBindNode::bindValue() write LOB", xsink))
+            return;
+
+         stmt.bindByPos(bndp, pos, &strlob, 0, SQLT_BLOB, xsink, pIndicator);
+      }
+      else {
+         dtype = SQLT_BIN;
+
+         printf("OraBindNode::bindValue() BLOB ptr: %p size: %d\n", b->getPtr(), b->size());
+         //printd(5, "OraBindNode::bindValue() BLOB ptr: %p size: %d\n", b->getPtr(), b->size());
+
+         if (!in_only) {
+            // bind a copy of the value in case of in/out variables
+            SimpleRefHolder<BinaryNode> tb(b->copy());
+            assert(tb->size() == len);
+            buf.ptr = (void*)tb->giveBuffer();
+         }
+         else
+            buf.ptr = (void*)b->getPtr();
+
+         stmt.bindByPos(bndp, pos, buf.ptr, len, SQLT_BIN, xsink, pIndicator);
+      }
       return;
    }
 
@@ -1601,13 +1637,13 @@ void OraBindNode::resetValue(ExceptionSink* xsink) {
    }
 
    if (strlob) {
-      if (clob_allocated) {
+      if (lob_allocated) {
          QoreOracleConnection* conn = stmt.getData();
          //printd(5, "deallocating temporary clob\n");
-         conn->checkerr(OCILobFreeTemporary(conn->svchp, conn->errhp, strlob), "OraBindNode::resetValue() free temporary CLOB", xsink);
-         clob_allocated = 0;
+         conn->checkerr(OCILobFreeTemporary(conn->svchp, conn->errhp, strlob), "OraBindNode::resetValue() free temporary LOB", xsink);
+         lob_allocated = false;
       }
-      //printd(5, "freeing clob descriptor\n");
+      //printd(5, "freeing lob descriptor\n");
       OCIDescriptorFree(strlob, OCI_DTYPE_LOB);
       strlob = 0;
    }
